python/executable/build/bdist.macosx-10.8-x86_64/python2.7-standalone/app/collect/pysdif/sdif.h

/* forward declaration of big SDIF file struct type */
typedef struct SdifFileS SdifFileT;
/* SdifHash.h */
typedef enum SdifHashIndexTypeE
{
  eHashChar,
  eHashInt4
} SdifHashIndexTypeET;
typedef struct SdifHashTableS SdifHashTableT;
struct SdifHashTableS
{
  SdifHashNT* *Table;		/* table of pointers to hash bins */
  unsigned int HashSize;	/* number of hash bins */
  SdifHashIndexTypeET IndexType;
  void (*Killer)(void *); 
  unsigned int NbOfData;	/* total number of entries */
} ;
typedef uint16_t       SdifUInt2;
typedef uint32_t       SdifUInt4;
typedef unsigned short SdifUInt2;
typedef unsigned int   SdifUInt4;
typedef SdifUInt4      SdifSignature;
typedef double         SdifFloat8;
/* DataTypeEnum

   On Matt Wright's visit at IRCAM June 1999, we defined a new
   encoding for the MatrixDataType field with the feature that the low
   order byte encodes the number of bytes taken by each matrix
   element.  

   Low order byte encodes the number of bytes 
   High order bytes come from this (extensible) enum:

        0 : Float
        1 : Signed integer
        2 : Unsigned integer
        3 : Text (UTF-8 when 1 byte)
        4 : arbitrary/void
*/
typedef enum SdifDataTypeE
{
  eText     = 0x0301,
  eChar     = 0x0301,
  eFloat4   = 0x0004,
  eFloat8   = 0x0008,
  eInt1     = 0x0101,
  eInt2     = 0x0102,
  eInt4     = 0x0104,
  eInt8     = 0x0108,
  eUInt1    = 0x0201,
  eUInt2    = 0x0202,
  eUInt4    = 0x0204,
  eUInt8    = 0x0208,
            
  eFloat4a  = 0x0001,   /* =  1 */    /* Backwards compatibility with old */
  eFloat4b  = 0x0020,   /* = 32 */    /* IRCAM versions < 3 of SDIF */
  eFloat8a  = 0x0002,   /* =  2 */    /* IN TEXT MODE ONLY! */
  eFloat8b  = 0x0040    /* = 64 */
} SdifDataTypeET;
/* SdifFrameType.h */
typedef struct SdifComponentS SdifComponentT;
struct SdifComponentS
{
  SdifSignature MtrxS;
  char *Name;
  SdifUInt4  Num;
} ;
typedef struct SdifFrameTypeS SdifFrameTypeT;
struct SdifFrameTypeS
{
  SdifSignature Signature;

  SdifFrameTypeT* FrameTypePre;

  SdifHashTableT *ComponentUseHT;
  SdifUInt4       NbComponentUse;

  SdifUInt4       NbComponent;
  SdifModifModeET ModifMode;
};
typedef struct SdifMatrixDataS SdifMatrixDataT;
struct SdifMatrixDataS
{
  SdifMatrixHeaderT *Header;
  int               ForeignHeader;  /* Header was not allocated by me */
  SdifUInt4         Size;       /* byte size of matrix on file */
  DataTypeUT        Data;       /* any type pointer to data */
  SdifUInt4         AllocSize;  /* allocated size of data in bytes */
};
/* SdifFrame.h */
typedef struct SdifFrameHeaderS SdifFrameHeaderT;
struct SdifFrameHeaderS
{
  SdifSignature Signature;
  SdifUInt4  Size;
  SdifUInt4  NbMatrix;
  SdifUInt4  NumID;
  SdifFloat8 Time;
} ;
typedef struct SdifFrameDataS SdifFrameDataT;
struct SdifFrameDataS
{
  SdifFrameHeaderT *Header;
  SdifMatrixDataT* *Matrix_s;
} ;
/*
// FUNCTION GROUP:      Init/Deinit of the Library
*/

/*DOC: 
  Initialise the SDIF library, providing a name for an optional additional
  file with type definitions or "".
  <b>This function has to be called once and only once per process 
  before any other call to the SDIF library.</b> */
SDIF_API void SdifGenInit (const char *PredefinedTypesFile);
SDIF_API SdifFrameHeaderT* SdifCreateFrameHeaderEmpty(SdifSignature Signature);
SDIF_API void              SdifKillFrameHeader  (SdifFrameHeaderT *FrameHeader);
SDIF_API SdifFrameDataT* SdifCreateFrameData(SdifHashTableT *FrameTypesTable,
                                           SdifSignature FrameSignature,
                                           SdifUInt4 NumID,
                                           SdifFloat8 Time);
SDIF_API void            SdifKillFrameData   (SdifHashTableT *FrameTypesTable, SdifFrameDataT *FrameData);
SDIF_API SdifFrameDataT* SdifFrameDataPutNthMatrixData(SdifFrameDataT *FrameData, unsigned int NthMatrix,
                                                     SdifMatrixDataT *MatrixData);
SDIF_API SdifFrameDataT* SdifFrameDataPutComponentMatrixData(SdifHashTableT *FrameTypesTable,
                                                           SdifFrameDataT *FrameData,
                                                           char *CompoName, SdifMatrixDataT *MatrixData);
SDIF_API SdifMatrixDataT* SdifFrameDataGetNthMatrixData(SdifFrameDataT *FrameData, unsigned int NthMatrix);
SDIF_API SdifMatrixDataT* SdifFrameDataGetComponentMatrixData(SdifHashTableT *FrameTypesTable,
                                                            SdifFrameDataT *FrameData,
                                                     char *CompoName);
SDIF_API SdifComponentT* SdifCreateComponent (SdifSignature MtrxS, char *Name, SdifUInt4 Num);
SDIF_API void            SdifKillComponent   (SdifComponentT *Component);
SDIF_API SdifFrameTypeT* SdifCreateFrameType (SdifSignature FramS, SdifFrameTypeT *PredefinedFrameType);
SDIF_API void            SdifKillFrameType               (SdifFrameTypeT *FrameType);
/**
 * Get number of matrix components defined in frame type. 
 */
SdifUInt4 SdifFrameTypeGetNbComponents (SdifFrameTypeT *FrameType);
/** 
 * Access a frame type component definition by matrix component number (starting from 1).
 */
SDIF_API SdifComponentT* SdifFrameTypeGetNthComponent    (SdifFrameTypeT *FrameType, SdifUInt4 NumC);
/** 
 * Access a frame type component definition by matrix component signature 
 */
SDIF_API SdifComponentT* SdifFrameTypeGetComponent_MtrxS (SdifFrameTypeT *FrameType, SdifSignature MtrxS);
/** 
 * Access a frame type component definition by matrix component name 
 */
SDIF_API SdifComponentT* SdifFrameTypeGetComponent       (SdifFrameTypeT *FrameType, const char *NameC);
SDIF_API SdifFrameTypeT* SdifFrameTypePutComponent       (SdifFrameTypeT *FrameType, SdifSignature MtrxS, char *NameC);
/** Get matrix signature of frame component definition */
SdifSignature SdifFrameTypeGetComponentSignature (SdifComponentT *comp);
/** Get matrix role of frame component definition */
char *SdifFrameTypeGetComponentName (SdifComponentT *comp);
/**
 * Get frame type pointer from signature, given a frame type hash table.
 * Use SdifFGetFrameTypesTable to get this.
 */ 
SDIF_API SdifFrameTypeT* SdifGetFrameType       (SdifHashTableT *FrameTypeHT, SdifSignature FramS);
SDIF_API void            SdifPutFrameType       (SdifHashTableT *FrameTypeHT, SdifFrameTypeT *FrameType);
SDIF_API SdifUInt2       SdifExistUserFrameType (SdifHashTableT *FrameTypeHT);
#define _SdifFormatVersion 3
#define _SdifTypesVersion  1
/* _SdifEnvVar : Environnement variable which contains the name
 * of the file which contains predefined types (the name contains the path).
 * _SdifEnvVar is used in SdifFile.c SdifGenInit, the user can
 * reference predefined types by this envvar name.
 */
#define _SdifEnvVar "SDIFTYPES"
/* Default predefined types : _SdifTypesFileName see SdifFile.c
 */

/* allocation constants
   TODO: should these be public? */
#define _SdifListNodeStockSize 0x400 /* 1024 */
#define _SdifGenHashSize         127 /* size of matrix/frame type table */
#define _SdifNameValueHashSize    31 /* size of hash table for NVTs */
#define _SdifUnknownSize  0xffffffff
#define _SdifGranule            1024 /* for OneRow allocation in bytes */
#define _SdifPadding               8
#define _SdifPaddingBitMask (_SdifPadding - 1)
#define _SdifFloat8Error  0xffffffff
#define _SdifNoTime       _Sdif_MIN_DOUBLE_     /* for header ASCII frames */
#define _SdifNoStreamID   0xfffffffe            /* -2 used for 1TYP */
#define _SdifAllStreamID  0xffffffff            /* -1 used for 1IDS */
#define _SdifUnknownUInt4 0xffffffff
/* CNMAT restriction: only one frame type per stream.  
   Therefore we have to use unique IDs for all 'header' frames. */
#define _SdifNVTStreamID  0xfffffffd            /* -3 used for 1NVT */
#define _SdifIDSStreamID  0xfffffffc            /* -4 unused */
#define _SdifTYPStreamID  0xfffffffb            /* -5 unused */
#define _SdifFloatEps  FLT_EPSILON
/* #ifdef STDC_HEADERS */  /* Is the compiler ANSI? */

/* generate template for all types, 
   called by sdif_foralltypes and sdif_proto_foralltypes. */
#define sdif__foralltypes(macro, post)  macro(Float4)post \
                                        macro(Float8)post \
                                        macro(Int1  )post \
                                        macro(Int2  )post \
                                        macro(Int4  )post \
                                        macro(UInt1 )post \
                                        macro(UInt2 )post \
                                        macro(UInt4 )post \
                                        macro(Char  )post \
                                     /* macro(Int8  )post \
                                        macro(UInt8 )post \
                                      */
#define sdif_foralltypes_post_body    /* this is empty */
#define sdif_foralltypes_post_proto ; /* this is a semicolon */
/* generate template for all types */
#define sdif_foralltypes(macro)         \
        sdif__foralltypes(macro,sdif_foralltypes_post_body)
/* generate prototype template for all types */
#define sdif_proto_foralltypes(macro)   \
        sdif__foralltypes(macro,sdif_foralltypes_post_proto)
#define _SdifStringLen 1024
extern SDIF_API char gSdifString[_SdifStringLen];
extern SDIF_API char gSdifString2[_SdifStringLen];
extern SDIF_API char gSdifErrorMess[_SdifStringLen];
#define _SdifNbMaxPrintSignature 8
extern SDIF_API char gSdifStringSignature[_SdifNbMaxPrintSignature][5];
extern SDIF_API int  CurrStringPosSignature;
/*
// FUNCTION GROUP:      utility functions
*/

/*DOC:
*/
SDIF_API char*     SdifSignatureToString(SdifSignature Signature);
/*DOC: 
  Compare two signatures, ignoring the first character which
  encodes the type version.  Note that comparison of full signatures
  can be done simply with '=='. 
*/
SDIF_API int     SdifSignatureCmpNoVersion(SdifSignature Signature1, SdifSignature Signature2);
/*DOC: 
  Returns size of SDIF data type in bytes
  (which is always the low-order byte).  
*/
SDIF_API SdifUInt4 SdifSizeofDataType (SdifDataTypeET DataType);
/*DOC: 
  Returns true if DataType is in the list of known data types.
*/
SDIF_API int SdifDataTypeKnown (SdifDataTypeET DataType);
/*DOC:
*/
SDIF_API size_t    SdifPaddingCalculate  (size_t NbBytes);
/*DOC:
*/
SDIF_API size_t    SdifFPaddingCalculate (FILE *f, size_t NbBytes);
/* (double f1) == (double f2) with _SdifFloatEps for error */
SDIF_API int SdifFloat8Equ(SdifFloat8 f1, SdifFloat8 f2);
#define MIN(a,b)        ((a) < (b)  ?  (a)  :  (b))
#define MAX(a,b)        ((a) > (b)  ?  (a)  :  (b))
/* SdifHard_OS.h */

/* _Sdif_MIN_DOUBLE_ tested on SGI, DEC alpha, PCWin95 as 0xffefffffffffffff
 * include may be limits.h (float.h is sure with VisualC++5 Win 95 or NT)
 */
#define _Sdif_MIN_DOUBLE_ (- DBL_MAX)
SDIF_API int       SdifStrLen  (const char *s);
/* returns 0 if strings are equal */
SDIF_API int       SdifStrCmp  (const char *s1, const char *s2);
/* returns true if strings are equal */
SDIF_API int       SdifStrEq(const char *s1, const char *s2);
SDIF_API int       SdifStrNCmp (const char *s1, const char *s2, unsigned int n);
SDIF_API char*     SdifStrNCpy (char *s1, const char *s2, unsigned int n);
SDIF_API char*     SdifCreateStrNCpy (const char* Source, size_t Size);
SDIF_API SdifHashTableT* SdifCreateHashTable(unsigned int HashSize, SdifHashIndexTypeET IndexType, void (*Killer)(void *));
/**
 * Get table of frame type definitions declare in this file's header only, 
 * useful for SdifGetFrameType. 
 *
 * @ingroup types
 */
SDIF_API SdifHashTableT *SdifFGetFrameTypesTable(SdifFileT *file);
sdif_proto_foralltypes (sdif_scanproto)

#endif /* SWIG */