python/executable/build/bdist.macosx-10.8-x86_64/python2.7-standalone/app/collect/pysdif/pysdif.pxd


    SdifFrameHeaderT* SdifCreateFrameHeaderEmpty(SdifSignature Signature)
    # 
    void              SdifKillFrameHeader  (SdifFrameHeaderT *FrameHeader)
    # 
    SdifFrameDataT* SdifCreateFrameData(SdifHashTableT *FrameTypesTable,
                                                SdifSignature FrameSignature,
                                                SdifUInt4 NumID,
                                                SdifFloat8 Time)
    # 
    void SdifKillFrameData (SdifHashTableT *FrameTypesTable, SdifFrameDataT *FrameData)
    # 
    SdifFrameDataT* SdifFrameDataPutNthMatrixData(SdifFrameDataT *FrameData, unsigned int NthMatrix,
                                                          SdifMatrixDataT *MatrixData)
    # 
    SdifFrameDataT* SdifFrameDataPutComponentMatrixData(SdifHashTableT *FrameTypesTable,
                                                                SdifFrameDataT *FrameData,
                                                                char *CompoName, SdifMatrixDataT *MatrixData)
    # 
    SdifMatrixDataT* SdifFrameDataGetNthMatrixData(SdifFrameDataT *FrameData, unsigned int NthMatrix)
    # 
    SdifMatrixDataT* SdifFrameDataGetComponentMatrixData(SdifHashTableT *FrameTypesTable,
                                                                 SdifFrameDataT *FrameData,
                                                          char *CompoName)
    # 
    # 
    # 
    SdifComponentT* SdifCreateComponent (SdifSignature MtrxS, char *Name, SdifUInt4 Num)
    void            SdifKillComponent   (SdifComponentT *Component)
    SdifFrameTypeT* SdifCreateFrameType (SdifSignature FramS, SdifFrameTypeT *PredefinedFrameType)
    # 
    void            SdifKillFrameType   (SdifFrameTypeT *FrameType)
    # 
    # /**
    #  * Get number of matrix components defined in frame type. 
    #  */
    SdifUInt4 SdifFrameTypeGetNbComponents (SdifFrameTypeT *FrameType)
    # 
    # /** 
    #  * Access a frame type component definition by matrix component number (starting from 1).
    #  */
    SdifComponentT* SdifFrameTypeGetNthComponent    (SdifFrameTypeT *FrameType, SdifUInt4 NumC)
    # 
    # /** 
    #  * Access a frame type component definition by matrix component signature 
    #  */
    SdifComponentT* SdifFrameTypeGetComponent_MtrxS (SdifFrameTypeT *FrameType, SdifSignature MtrxS)
    # 
    # /** 
    #  * Access a frame type component definition by matrix component name 
    #  */
    SdifComponentT* SdifFrameTypeGetComponent       (SdifFrameTypeT *FrameType, const_char_ptr NameC)
    # 
    SdifFrameTypeT* SdifFrameTypePutComponent       (SdifFrameTypeT *FrameType, SdifSignature MtrxS, char *NameC)
    # 
    # 
    # /** Get matrix signature of frame component definition */
    SdifSignature SdifFrameTypeGetComponentSignature (SdifComponentT *comp)
    # 
    # /** Get matrix role of frame component definition */
    char *SdifFrameTypeGetComponentName (SdifComponentT *comp)
    # 
    # 
    # /**
    #  * Get frame type pointer from signature, given a frame type hash table.
    #  * Use SdifFGetFrameTypesTable to get this.
    #  */ 
    SdifFrameTypeT* SdifGetFrameType       (SdifHashTableT *FrameTypeHT, SdifSignature FramS)
    # 
    void            SdifPutFrameType       (SdifHashTableT *FrameTypeHT, SdifFrameTypeT *FrameType)
    SdifUInt2       SdifExistUserFrameType (SdifHashTableT *FrameTypeHT)
    # 
    # 
    # 
    # /* set default if not overridden from makefile */
    # #ifndef _SdifFormatVersion
    # #define _SdifFormatVersion 3
    # #endif
    DEF _SdifFormatVersion = 3
    # 
    # #define _SdifTypesVersion  1
    DEF _SdifTypesVersion = 1
    # 
    # 
    # /* _SdifEnvVar : Environnement variable which contains the name
    #  * of the file which contains predefined types (the name contains the path).
    #  * _SdifEnvVar is used in SdifFile.c SdifGenInit, the user can
    #  * reference predefined types by this envvar name.
    #  */
    # #define _SdifEnvVar "SDIFTYPES"
    DEF _SdifEnvVar = "SDIFTYPES"
    # 
    # /* Default predefined types : _SdifTypesFileName see SdifFile.c
    #  */
    # 
    # /* allocation constants
    #    TODO: should these be public? */
    # #define _SdifListNodeStockSize 0x400 /* 1024 */
    DEF _SdifListNodeStockSize  = 0x400
    # #define _SdifGenHashSize         127 /* size of matrix/frame type table */
    DEF _SdifGenHashSize        = 127
    # #define _SdifNameValueHashSize    31 /* size of hash table for NVTs */
    DEF _SdifNameValueHashSize  = 31
    # #define _SdifUnknownSize  0xffffffff
    DEF _SdifUnknownSize        = 0xffffffff
    # #define _SdifGranule            1024 /* for OneRow allocation in bytes */
    DEF _SdifGranule            = 1024
    # #define _SdifPadding               8
    DEF _SdifPadding            = 8
    # #define _SdifPaddingBitMask (_SdifPadding - 1)
    DEF _SdifPaddingBitMask     = _SdifPadding - 1
    # 
    # #define _SdifFloat8Error  0xffffffff
    DEF _SdifFloat8Error        = 0xffffffff
    # #define _SdifNoTime       _Sdif_MIN_DOUBLE_     /* for header ASCII frames */
    #DEF _SdifNoTime                = _Sdif_MIN_DOUBLE_
    # #define _SdifNoStreamID   0xfffffffe            /* -2 used for 1TYP */
    DEF _SdifNoStreamID = 0xfffffffe
    # #define _SdifAllStreamID  0xffffffff            /* -1 used for 1IDS */
    DEF _SdifAllStreamID = 0xffffffff
    # #define _SdifUnknownUInt4 0xffffffff
    DEF _SdifUnknownUInt4 = 0xffffffff
    # 
    # /* CNMAT restriction: only one frame type per stream.  
    #    Therefore we have to use unique IDs for all 'header' frames. */
    # #define _SdifNVTStreamID  0xfffffffd            /* -3 used for 1NVT */
    DEF _SdifNVTStreamID = 0xfffffffd
    # #define _SdifIDSStreamID  0xfffffffc            /* -4 unused */
    DEF _SdifIDSStreamID = 0xfffffffc
    # #define _SdifTYPStreamID  0xfffffffb            /* -5 unused */
    DEF _SdifTYPStreamID = 0xfffffffb
    # 
    # 
    # #define _SdifFloatEps  FLT_EPSILON
    DEF _SdifFloatEps = FLT_EPSILON
    
    # 
    # /* DataTypeEnum
    # 
    #    On Matt Wright's visit at IRCAM June 1999, we defined a new
    #    encoding for the MatrixDataType field with the feature that the low
    #    order byte encodes the number of bytes taken by each matrix
    #    element.  
    # 
    #    Low order byte encodes the number of bytes 
    #    High order bytes come from this (extensible) enum:
    # 
    #         0 : Float
    #         1 : Signed integer
    #         2 : Unsigned integer
    #         3 : Text (UTF-8 when 1 byte)
    #         4 : arbitrary/void
    # */
    # 
    # 
    # #ifndef SWIG
    # /* #ifdef STDC_HEADERS */  /* Is the compiler ANSI? */
    # 
    # /* generate template for all types, 
    #    called by sdif_foralltypes and sdif_proto_foralltypes. */
    # #define sdif__foralltypes(macro, post)  macro(Float4)post \
    #                                         macro(Float8)post \
    #                                         macro(Int1  )post \
    #                                         macro(Int2  )post \
    #                                         macro(Int4  )post \
    #                                         macro(UInt1 )post \
    #                                         macro(UInt2 )post \
    #                                         macro(UInt4 )post \
    #                                         macro(Char  )post \
    #                                      /* macro(Int8  )post \
    #                                         macro(UInt8 )post \
    #                                       */
    # 
    # #define sdif_foralltypes_post_body    /* this is empty */
    # #define sdif_foralltypes_post_proto ; /* this is a semicolon */
    # 
    # 
    # /* generate template for all types */
    # #define sdif_foralltypes(macro)         \
    #         sdif__foralltypes(macro,sdif_foralltypes_post_body)
    # 
    # 
    # /* generate prototype template for all types */
    # #define sdif_proto_foralltypes(macro)   \
    #         sdif__foralltypes(macro,sdif_foralltypes_post_proto)
    # 
    # /* #endif */ /* STDC_HEADERS */
    # #endif /* SWIG */
    # 
    # 
    # #define _SdifStringLen 1024
    DEF _SdifStringLen = 1024
    # 
    # extern char gSdifString[_SdifStringLen];
    char gSdifString[_SdifStringLen]
    # extern char gSdifString2[_SdifStringLen];
    char gSdifString2[_SdifStringLen]
    # extern char gSdifErrorMess[_SdifStringLen];
    char gSdifErrorMess[_SdifStringLen]
    # 
    # #define _SdifNbMaxPrintSignature 8
    DEF _SdifNbMaxPrintSignature = 8
    # extern char gSdifStringSignature[_SdifNbMaxPrintSignature][5];
    char gSdifStringSignature[_SdifNbMaxPrintSignature][5]
    # extern int  CurrStringPosSignature;
    int  CurrStringPosSignature
    # 
    # 
    # /*
    # // FUNCTION GROUP:      utility functions
    # */
    # 
    # /*DOC:
    # */
    # char*     SdifSignatureToString(SdifSignature Signature);
    char* SdifSignatureToString(SdifSignature Signature)
    # 
    # /*DOC: 
    #   Compare two signatures, ignoring the first character which
    #   encodes the type version.  Note that comparison of full signatures
    #   can be done simply with '=='. 
    # */
    # int     SdifSignatureCmpNoVersion(SdifSignature Signature1, SdifSignature Signature2);
    int     SdifSignatureCmpNoVersion(SdifSignature Signature1, SdifSignature Signature2)
    # 
    # /*DOC: 
    #   Returns size of SDIF data type in bytes
    #   (which is always the low-order byte).  
    # */
    # SdifUInt4 SdifSizeofDataType (SdifDataTypeET DataType);
    SdifUInt4 SdifSizeofDataType (SdifDataTypeET DataType)
    # 
    # /*DOC: 
    #   Returns true if DataType is in the list of known data types.
    # */
    # int SdifDataTypeKnown (SdifDataTypeET DataType);
    int SdifDataTypeKnown (SdifDataTypeET DataType)
    # 
    # /*DOC:
    # */
    # size_t    SdifPaddingCalculate  (size_t NbBytes);
    size_t    SdifPaddingCalculate  (size_t NbBytes)
    # 
    # /*DOC:
    # */
    # size_t    SdifFPaddingCalculate (FILE *f, size_t NbBytes);
    size_t    SdifFPaddingCalculate (FILE *f, size_t NbBytes)
    # 
    # /* (double f1) == (double f2) with _SdifFloatEps for error */
    # int SdifFloat8Equ(SdifFloat8 f1, SdifFloat8 f2);
    # 
    # 
    # #ifndef MIN
    # #define MIN(a,b)        ((a) < (b)  ?  (a)  :  (b))
    # #endif
    # 
    # #ifndef MAX
    # #define MAX(a,b)        ((a) > (b)  ?  (a)  :  (b))
    # #endif
    # 
    # 
    # 
    # /* SdifHard_OS.h */
    # 
    # /* _Sdif_MIN_DOUBLE_ tested on SGI, DEC alpha, PCWin95 as 0xffefffffffffffff
    #  * include may be limits.h (float.h is sure with VisualC++5 Win 95 or NT)
    #  */
    # #define _Sdif_MIN_DOUBLE_ (- DBL_MAX)
    DEF _Sdif_MIN_DOUBLE_ = -DBL_MAX
    DEF _SdifNoTime       = _Sdif_MIN_DOUBLE_
    # 
    # 
    # int       SdifStrLen  (const_char_ptr s);
    int SdifStrLen  (const_char_ptr s)
    # 
    # /* returns 0 if strings are equal */
    # int       SdifStrCmp  (const_char_ptr s1, const_char_ptr s2);
    int       SdifStrCmp  (const_char_ptr s1, const_char_ptr s2)
    # 
    # /* returns true if strings are equal */
    # int       SdifStrEq(const_char_ptr s1, const_char_ptr s2);
    int       SdifStrEq(const_char_ptr s1, const_char_ptr s2)
    # int       SdifStrNCmp (const_char_ptr s1, const_char_ptr s2, unsigned int n);
    int       SdifStrNCmp (const_char_ptr s1, const_char_ptr s2, unsigned int n)
    # char*     SdifStrNCpy (char *s1, const_char_ptr s2, unsigned int n);
    char*     SdifStrNCpy (char *s1, const_char_ptr s2, unsigned int n)
    # char*     SdifCreateStrNCpy (const char* Source, size_t Size);
    char*     SdifCreateStrNCpy (const_char_ptr Source, size_t Size)
